fix(1709): UI Overlap

--- a/common-components/ui-components/HistoricalChat/HistoricalChat.scss
+++ b/common-components/ui-components/HistoricalChat/HistoricalChat.scss
@@ -145,6 +145,8 @@
     &--backoffice-user {
       #{$self} {
         &__group-header {
+          display: flex;
+          justify-content: flex-end;
           align-items: center;
         }
 
@@ -165,7 +167,7 @@
           display: flex;
           flex-direction: column;
           gap: 4px;
-          align-items: flex-start;
+          align-items: flex-end;
           padding-left: 50px;
         }
 
